# Fish-Fillets-NG

./: .cvsignore  AUTHORS  Doxyfile  Makefile.am  Makefile.cvs  NEWS  README  README-binary  TODO  autogen.sh  configure.ac  configure.in  fillets.6  main.aap  sdl.m4
src/: Makefile.am  main.aap
src/SDL_gfx/: .cvsignore  Makefile.am  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h
src/SFont/: Makefile.am  SFont.c  SFont.h  main.aap
src/effect/: Color.h  EffectDisintegrate.cpp  EffectDisintegrate.h  EffectInvisible.h  EffectMirror.cpp  EffectMirror.h  EffectNone.cpp  EffectNone.h  EffectReverse.cpp  EffectReverse.h  EffectZx.cpp  EffectZx.h  Font.cpp  Font.h  LayeredPicture.cpp  LayeredPicture.h  Makefile.am  Outline.cpp  Outline.h  Picture.cpp  Picture.h  PixelIterator.cpp  PixelIterator.h  PixelTool.cpp  PixelTool.h  ResColorPack.h  SurfaceTool.cpp  SurfaceTool.h  TTFException.cpp  ViewEffect.cpp  ViewEffect.h  WavyPicture.cpp  WavyPicture.h
src/game/: Anim.cpp  Anim.h  Application.cpp  Application.h  CommandQueue.cpp  CommandQueue.h  ControlSym.h  Controls.cpp  Controls.h  Cube.cpp  Cube.h  DemoMode.cpp  DemoMode.h  Driver.h  Field.cpp  Field.h  FishDialog.cpp  FishDialog.h  GameAgent.cpp  GameAgent.h  Goal.cpp  Goal.h  KeyConsole.cpp  KeyConsole.h  KeyDriver.cpp  KeyDriver.h  Level.cpp  Level.h  LevelNode.cpp  LevelNode.h  LuaTable.h  Makefile.am  MarkMask.cpp  MarkMask.h  ModelFactory.cpp  ModelFactory.h  NodeDrawer.cpp  NodeDrawer.h  Picture.cpp  Picture.h  (+30 more)
src/gengine/: Actor.cpp  Actor.h  AgentPack.cpp  BaseAgent.cpp  BaseAgent.h  BaseListener.cpp  BaseListener.h  BaseMsg.h  Dialog.cpp  Dialog.h  DialogAgent.cpp  DialogAgent.h  DialogStack.cpp  DialogStack.h  Drawable.h  DummySoundAgent.h  Environ.cpp  Environ.h  ExInfo.h  FsPath.cpp  IDrawer.cpp  IDrawer.h  IKeyConsole.h  INamed.h  ImgException.cpp  InputAgent.cpp  InputAgent.h  InputHandler.cpp  InputHandler.h  InputProvider.h  KeyBinder.cpp  KeyBinder.h  KeyConsole.cpp  KeyConsole.h  KeyStroke.cpp  KeyStroke.h  Log.cpp  Makefile.am  MessagerAgent.cpp  MixException.cpp  (+57 more)
src/level/: Anim.cpp  Anim.h  ControlSym.h  Controls.cpp  Controls.h  Cube.cpp  Cube.h  Decor.h  Dir.cpp  Dir.h  Field.cpp  Field.h  FinderAlg.cpp  Goal.cpp  KeyControl.cpp  KeyControl.h  Landslip.cpp  Level.cpp  Level.h  LevelCountDown.cpp  LevelCountDown.h  LevelInput.cpp  LevelInput.h  LevelLoading.cpp  LevelLoading.h  LevelScript.cpp  LevelScript.h  LevelStatus.cpp  LevelStatus.h  Makefile.am  MarkMask.cpp  MarkMask.h  ModelFactory.cpp  ModelFactory.h  ModelList.cpp  ModelList.h  MouseControl.cpp  OnStack.h  PhaseLocker.cpp  PhaseLocker.h  (+27 more)
src/menu/: Labels.cpp  LangFlag.cpp  LevelNode.cpp  LevelNode.h  LuaTable.cpp  Makefile.am  MenuOptions.cpp  MenuOptions.h  NodeDrawer.cpp  NodeDrawer.h  OptionsInput.cpp  PedoInput.cpp  PedoInput.h  Pedometer.cpp  Pedometer.h  SelectLang.cpp  SelectLang.h  SolverDrawer.cpp  WorldBranch.cpp  WorldBranch.h  WorldInput.cpp  WorldInput.h  WorldMap.cpp  WorldMap.h  WorldWay.cpp  WorldWay.h  worldmap-script.cpp  worldmap-script.h
src/option/: HelpInput.cpp  HelpInput.h  LangFlag.h  Makefile.am  MenuHelp.cpp  MenuHelp.h  MenuOptions.cpp  MenuOptions.h  OptionsInput.cpp  OptionsInput.h  RadioBox.cpp  RadioBox.h  SelectLang.cpp  SelectLang.h
src/plan/: CommandQueue.cpp  ConsoleInput.cpp  ConsoleInput.h  DemoInput.cpp  DemoInput.h  DemoMode.cpp  DemoMode.h  FishDialog.cpp  FishDialog.h  GameState.cpp  GameState.h  KeyConsole.cpp  KeyConsole.h  Keymap.cpp  Keymap.h  Makefile.am  Picture.cpp  Planner.cpp  Planner.h  StateInput.cpp  StateInput.h  StateManager.cpp  StateManager.h  SubTitleAgent.cpp  SubTitleAgent.h  Title.cpp  Title.h  dialog-script.cpp  dialog-script.h
src/state/: DemoInput.cpp  DemoInput.h  DemoMode.cpp  DemoMode.h  GameInput.cpp  GameInput.h  Makefile.am  MovieState.cpp  MovieState.h  PosterScroller.cpp  PosterScroller.h  PosterState.cpp  PosterState.h  demo-script.cpp
src/widget/: IWidget.cpp  IWidget.h  Labels.h  Makefile.am  Slider.cpp  Slider.h  VBox.cpp  VBox.h  WiBox.cpp  WiBox.h  WiButton.h  WiLabel.cpp  WiLabel.h  WiPara.cpp  WiPara.h  WiPicture.cpp  WiPicture.h  WiStatusBar.cpp  WiStatusBar.h  WidgetContainer.cpp  WidgetContainer.h
