
INCLUDES = -I@top_srcdir@/src/gengine $(SDL_CFLAGS) $(LUA_CFLAGS) $(BOOST_CFLAGS)

noinst_LIBRARIES = libeffect.a

libeffect_a_SOURCES = Font.cpp Font.h Outline.cpp Outline.h ViewEffect.cpp ViewEffect.h Color.h ResColorPack.h SurfaceLock.cpp SurfaceLock.h TTFException.cpp TTFException.h Picture.cpp Picture.h WavyPicture.cpp WavyPicture.h LayeredPicture.cpp LayeredPicture.h PixelTool.cpp PixelTool.h

